add database and socketio

--- a/view/index.html
+++ b/view/index.html
@@ -14,4 +14,9 @@ function homeCtrl($scope, $http) {
 	$scope.project = ["Hello", "World", "!"];
 }
 </script>
+
+<script src="/socket.io/socket.io.js"></script>
+<script>
+  var socket = io();
+</script>
 {% endblock %}
