--- a/view/index.html
+++ b/view/index.html
@@ -1,6 +1,25 @@
 {% extends 'layout.html' %}
 {% block body %}
 <div class="container-wide" ng-controller="homeCtrl">
+	<form action="/login" method="post">
+    <p>
+      <label>Username:
+        <input type="text" name="username" value="test" />
+      </label>
+    </p>
+    <p>
+      <label>Password:
+        <input type="password" name="password" value="test" />
+      </label>
+    </p>
+    <p>
+      <button type="submit">Log In</button>
+    </p>
+    <p>
+      <a href="/auth/facebook">Sign in with Facebook</a> <a href="/auth/twitter">Sign in with Twitter</a> <a href="/auth/google">Sign in with Google</a>
+    </p>
+  </form>
+
 	<h1>HELLO WORLD!</h1>
 	<div ng-repeat="item in project">
 		[[item]]
