--- a/view/account.html
+++ b/view/account.html
@@ -2,7 +2,7 @@
 {% block body %}
 <div class="container-wide" ng-controller="homeCtrl">
 	<h1>LOGGED IN</h1>
-
+	<a href="/logout">logout</a>
 	<h1>HELLO WORLD!</h1>
 	<div ng-repeat="item in project">
 		[[item]]
